# aoc-cpp

./: .gitignore  CMakeLists.txt  dependencies.cmake
include/: solution.hpp
src/: CMakeLists.txt
src/0/: solution.cpp
test/: CMakeLists.txt  test.cpp  test.hpp
